--- a/ui/style.css
+++ b/ui/style.css
@@ -19,11 +19,11 @@ body {
     height: 200px;
 }
 
-   container{
-   	max-width: 800px;
-   	margin: 0 auto;
-   	color: #4a4a4a;
-   	font-family: sans-serif;
-   	padding-left: 20px;
-   	padding-right: 20px;
-   }
+.container{
+            max-width:800px;
+            margin: 0 auto;
+            color:grey;
+            font-family:Sans-Serif;
+            padding-left:20px; 
+            padding-right:20px;
+        }
