--- a/ui/style.css
+++ b/ui/style.css
@@ -1,29 +1,1 @@
-body {
-    font-family: sans-serif;
-    margin-top: 60px;
-}
-
-.center {
-    text-align: center;
-}
-
-.text-big {
-    font-size: 300%;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.img-medium {
-    height: 200px;
-}
-
-.container{
-            max-width:800px;
-            margin: 0 auto;
-            color:grey;
-            font-family:Sans-Serif;
-            padding-left:20px; 
-            padding-right:20px;
-        }
+body{font-family:sans-serif;margin-top:60px}.center{text-align:center}.text-big{font-size:300%}.bold{font-weight:700}.img-medium{height:200px}.container{max-width:800px;margin:0 auto;color:grey;font-family:Sans-Serif;padding-left:20px;padding-right:20px}
